LoginForm was breaking out of the screen width. Corrected

--- a/front_end/src/components/LoginForm/LoginForm.scss
+++ b/front_end/src/components/LoginForm/LoginForm.scss
@@ -8,10 +8,23 @@ $fontSize: 1.25rem;
 	
 	font-size: $fontSize;
 	
+	width: fit-content;
+	box-sizing: border-box;
+	
 	margin: 5vw;
 	
 	input {
 		font-size: $fontSize;
+	}
+	
+	input[type=email], input[type=password] {
+		width: 100%;
+		box-sizing: border-box;
+	}
+	
+	label {
+		width: 100%;
+		box-sizing: border-box;
 	}
 	
 	input[type=submit] {
