--- a/front_end/src/components/LoginPage/LoginPage.scss
+++ b/front_end/src/components/LoginPage/LoginPage.scss
@@ -7,9 +7,12 @@
 	height: 100vh;
 	width: 100vw;
 	
+	
+	
 	.loginPageContentContainer {
 		
 		position: absolute;
+		width: fit-content;
 		top: 50%;
 		left: 50%;
 		-ms-transform: translate(-50%, -50%);
@@ -46,6 +49,6 @@
 @media only screen and (min-width: 550px)
 {
 	.LoginPage {
-		min-width: 50vw;
+		min-width: 90vw;
 	}
 }
